pkl-core/src/test/files/LanguageSnippetTests/input/errors/forGeneratorCannotGenerateMethods.pkl
foo {
  for (n in List(1, 2, 3)) { local function foo() = "foo" }
}